# zero

./: .gitignore  ARCHITECTURE_SUMMARY.md  CLAUDE.md  COMPLETION_REPORT.md  Cargo.toml  DEVELOPER_GUIDE.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  README.md.backup  README.zh-CN.md  README.zh-CN.md.backup  fix_rust.sh
.github/workflows/: ci.yml  security.yml
benches/: Cargo.toml  bench_basic.rs
charts/zero/: Chart.yaml  values.yaml
charts/zero/templates/: deploy.yaml
deploy/docker/: base.Dockerfile  run-module.sh
docs/: 01-getting-started.md  01-getting-started.zh-CN.md  02-core-concepts.md  02-core-concepts.zh-CN.md  03-trait-architecture.md  03-trait-architecture.zh-CN.md  04-examples.md  04-examples.zh-CN.md  05-api-reference.md  05-api-reference.zh-CN.md  06-hooks-system.md  06-hooks-system.zh-CN.md  07-contributing.md  07-contributing.zh-CN.md  ARCHITECTURE.md
docs/plans/: 2026-02-28-zero-design.md  2026-02-28-zero-implementation-plan.md  2026-02-28-zero-rust-implementation.md  2026-03-01-implementation-roadmap.md  2026-03-01-phase1-detailed-plan.md  2026-03-01-readme-restructure-design.md  2026-03-01-readme-restructure-implementation.md  2026-03-02-architecture-optimization-design.md  2026-03-02-architecture-optimization-implementation.md  2026-03-02-zero-api-design.md  2026-03-02-zero-api-implementation.md  2026-03-02-zero-cli-tui-design.md  2026-03-02-zero-cli-tui.md  2026-03-05-zero-api-agent-system-design.md  2026-03-05-zero-api-agent-system-implementation.md  2026-03-05-zero-api-domain-state-design.md  2026-03-05-zero-api-domain-state-implementation.md  2026-03-05-zero-web-design.md  2026-03-05-zero-web-implementation.md
examples/: 01-simple-agent.rs  02-custom-tool.rs  03-multi-agent.rs  config.yaml
scripts/: complete-implementation.js
src/: auth.rs  lib.rs  main.rs  network.rs  storage.rs
src/security/: errors.rs  mod.rs  monitor.rs  scan.rs  validator.rs
zero-api/: Cargo.toml
zero-api/src/: main.rs
zero-api/src/domain/: error.rs  models.rs  service.rs
zero-api/src/http/: dto.rs  handlers.rs  routes.rs
zero-api/src/state/: app_state.rs  mod.rs  session_store.rs
zero-cli/: Cargo.toml
zero-cli/src/: main.rs
zero-cli/src/tui/: app.rs  event.rs  mod.rs  runtime.rs  ui.rs
zero-core/: Cargo.toml  README.md  README.zh-CN.md
zero-core/src/: error.rs  init.rs  lib.rs  message.rs
zero-core/src/agent/: agent_loop.rs  context.rs  context_manager.rs  hook.rs  hooked_agent.rs  loop_config.rs  mod.rs  token_counter.rs  trait.rs
zero-core/src/channel/: analytics.rs  discord.rs  email.rs  hook.rs  matrix.rs  mod.rs  persistence.rs  queue.rs  registry.rs  slack.rs  telegram.rs  trait.rs  webhook.rs
zero-core/src/channel/registry/: mod.rs
zero-core/src/config/: hooks.rs  loader.rs  mod.rs  validator.rs
zero-core/src/container/: mod.rs
zero-core/src/coordinator/: mod.rs  policy.rs  trait.rs
zero-core/src/hooks/: manager.rs  mod.rs
zero-core/src/integration/: adapters.rs  bus.rs  envelope.rs  mod.rs
zero-core/src/memory/: hook.rs  memory.rs  mod.rs  search.rs
zero-core/src/memory/backend/: filesystem.rs  mod.rs
zero-core/src/perf/: monitor.rs
zero-core/src/planning/: mod.rs  planner.rs  todo.rs
zero-core/src/pool/: mod.rs
zero-core/src/provider/: adapter.rs  anthropic.rs  health.rs  hook.rs  loop_provider.rs  mod.rs  ollama.rs  openai.rs  routing.rs  trait.rs
zero-core/src/provider/router/: health.rs  mod.rs  policy.rs  rate.rs
zero-core/src/runtime/: contracts.rs  control_plane.rs  data_plane.rs  idempotency.rs  metrics.rs  mod.rs  recovery.rs  verifier.rs
zero-core/src/scheduler/: manager.rs  mod.rs  priority.rs  queue.rs
zero-core/src/security/: command_safety.rs  mod.rs  permissions.rs  sandbox.rs  scanner.rs  secrets.rs  validator.rs
zero-core/src/task/: manager.rs  mod.rs  model.rs  store.rs
zero-core/src/team/: coordinator.rs  mod.rs  protocol.rs
zero-core/src/tool/: dispatcher.rs  hook.rs  metadata.rs  mod.rs  registry.rs  trait.rs
zero-core/src/tool/builtins/: bash.rs  file.rs  mod.rs
zero-core/tests/: integration_bus.rs  runtime_integration.rs
zero-desktop/: Cargo.toml
zero-web/: README.md  index.html  package-lock.json  package.json
zero-web/src/: App.css  App.tsx  index.css  types.ts
zero-web/src/api/: client.ts
zero/zero-core/src/channel/: trait.rs
