[workspace]
resolver = "2"
members = [
    "zero-core",
    "zero-cli",
    "zero-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
