[package]
name = "zero-security"
version = "0.1.0"
edition = "2024"
description = "Security-optimized skeleton for zero Platform"
authors = ["OpenAI"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
regex = "1.0"
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.4"
