[workspace]
resolver = "2"
members = [
    "zero-core",
    "zero-cli",
    "zero-api",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = "0.5.3"
zero-core = { version = "0.1.0", path = "zero-core" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
