[package]
name = "zero-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
zero-core.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
uuid.workspace = true
async-trait.workspace = true
sqlx.workspace = true
