[package]
name = "zero-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
zero-core.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true
ratatui = "0.29"
crossterm = "0.28"
