[package]
name = "zero-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "tokio-runtime"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
config = "1.0"
num_cpus = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
uuid = "1.0"
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio-test = "0.4"
