[package]
name = "zero-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
reqwest.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true

[dev-dependencies]
tokio-test = "0.4"

[[example]]
name = "01-simple-agent"
path = "../examples/01-simple-agent.rs"

[[example]]
name = "02-custom-tool"
path = "../examples/02-custom-tool.rs"

[[example]]
name = "03-multi-agent"
path = "../examples/03-multi-agent.rs"
