[package]
name = "zero-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
zero-core = { path = "../zero-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
reqwest = "0.11"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
uuid = "1.0"
tracing = "0.1"
async-trait = "0.1"
reqwest = "0.11"
anyhow = "1"
